<resources>
    <string name="app_name">Accounts Follow Up</string>
    <string name="hello_message">Hello World!</string>
    <string name="title_activity_account_list">Account_list</string>
    <string name="title_activity_create_account">Create account</string>
    <string name="title_activity_account_details">Account details</string>
    <string name="title_activity_create_transaction">Create transaction</string>
    <string name="add_account">Add account</string>
    <string name="account_name">Account name</string>
    <string name="account_initial_amount">Initial amount</string>
    <string name="account_amount">Current amount</string>
    <string name="account_save">Save</string>
    <string name="currency">£</string>
    <string name="account_inserted_ok">Account saved</string>
    <string name="account_inserted_error">Could not save account</string>
    <string name="transaction_list_header">Last transactions</string>
    <string name="transaction_name">Transaction name</string>
    <string name="transaction_amount">Transaction amount</string>
    <string name="transaction_save">Save transaction</string>
    <string name="add_transaction">New transaction</string>
    <string name="delete_btn">Delete item</string>
    <string name="delete_transaction_dialog">Delete this transaction ?</string>
    <string name="delete_account_dialog">Delete this account ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>

