<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editAccountName"
        android:layout_toLeftOf="@+id/editAccountName"
        android:layout_toStartOf="@+id/editAccountName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/account_name"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/editAccountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="@dimen/text_size" >
    </EditText>


    <TextView
        android:id="@+id/textViewCurrentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/accountDetailAmount"
        android:layout_toLeftOf="@+id/accountDetailAmount"
        android:layout_toStartOf="@+id/accountDetailAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/account_amount"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/accountDetailAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editAccountName"
        android:layout_alignLeft="@+id/editAccountName"
        android:layout_below="@+id/editAccountName"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/accountCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/accountDetailAmount"
        android:layout_toEndOf="@+id/accountDetailAmount"
        android:text="@string/currency"
        android:textSize="@dimen/text_size"
        />

    <TextView
        android:id="@+id/transactionListHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountDetailAmount"
        android:textSize="@dimen/text_size"
        android:text="@string/transaction_list_header"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

    <ListView
        android:id="@+id/transactionList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/transactionListHeader">
    </ListView>

</RelativeLayout>
