<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/createTransactionScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10">
        <TextView
            android:id="@+id/transactionNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_name"
            android:textSize="@dimen/text_size"
            android:layout_weight="3"/>

        <EditText
            android:id="@+id/editTextTransactionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="@dimen/text_size"
            android:layout_weight="7">
        </EditText>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10">
        <TextView
            android:id="@+id/textViewTransactionAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_amount"
            android:textSize="@dimen/text_size"
            android:layout_weight="3"/>

        <EditText
            android:id="@+id/editTextTransactionAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="@dimen/text_size"
            android:layout_weight="7"/>
        </TableRow>

        <Button
            android:id="@+id/saveTransactionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/transaction_save"
            android:textSize="@dimen/text_size" />

    </LinearLayout>
</ScrollView>