<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_toLeftOf="@+id/editTextName"
            android:layout_toStartOf="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/account_name"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="@dimen/text_size" >
        </EditText>


        <TextView
            android:id="@+id/textViewCurrentAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextAmount"
            android:layout_toLeftOf="@+id/editTextAmount"
            android:layout_toStartOf="@+id/editTextAmount"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/account_amount"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/editTextAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editTextName"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_below="@+id/editTextName"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size" />





        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/editTextAmount"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/account_save"
            android:textSize="@dimen/text_size" />

    </RelativeLayout>
</ScrollView>